# krabdex

./: Cargo.toml  README.md
crates/krabdex/: Cargo.toml  README.md
crates/krabdex-mcp/: Cargo.toml  README.md
crates/krabdex-mcp/src/: lib.rs  main.rs  server.rs
crates/krabdex/src/: lib.rs
crates/krabdex/src/api/: generation.rs  mod.rs  pokemon.rs
crates/krabdex/src/client/: builder.rs  client.rs  config.rs  mod.rs  pagination.rs
crates/krabdex/src/error/: error.rs  tests.rs
crates/krabdex/src/http/: tests.rs
crates/krabdex/src/models/: common.rs  pokemon.rs
crates/krabdex/src/transport/: transport.rs
crates/krabdex/src/types/: identifiers.rs  pagination.rs
crates/krabdex/tests/: api_integration.rs
src/: lib.rs  main.rs
src/api/: generation.rs  pokemon.rs
src/client/: builder.rs  client.rs  config.rs  mod.rs
src/error/: classify.rs  error.rs  mod.rs
src/http/: http.rs  mod.rs  tests.rs  url.rs
src/models/: common.rs  generation.rs  mod.rs  pokemon.rs
src/transport/: mod.rs  reqwest_transport.rs  tests.rs
src/types/: identifiers.rs  mod.rs  pagination.rs
tests/: api_integration.rs  http.rs  types.rs
tests/http/: join_base.rs
