[package]
name = "krabdex"
version = "0.1.0"
edition = "2021"
description = "A type-safe, async Rust SDK for the PokeAPI"
documentation = "https://docs.rs/krabdex"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kodokoto/krabdex"
readme = "README.md"
rust-version = "1.88"
keywords = ["pokemon", "sdk", "pokeapi", "http", "client"]
categories = ["api-bindings", "asynchronous", "web-programming"]

[dependencies]
backoff = "0.4.0"
pokeapi-model = "0.1.4"
reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls", "rustls-native-certs", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1.44"
url = "2.5.8"

[dev-dependencies]
httpmock = "0.8.2"
pretty_assertions = "1.4.1"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
